--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "tianyu <tianyu5177@sina.com>",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.17.1",
     "mongoose": "^5.7.7",
     "uniq": "^1.0.1"
   }
