--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.1.2",
     "cookie-parser": "^1.4.4",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "mongoose": "^5.7.7",
     "uniq": "^1.0.1"
   }
