--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "md5": "^2.2.1",
     "mongoose": "^5.7.7",
+    "sha1": "^1.1.1",
     "uniq": "^1.0.1"
   }
 }
